# fanotify-layered-interceptor

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
src/: iceptor-tester.cpp  interceptor_l1.cpp  interceptor_l1.h  interceptor_l2.cpp  interceptor_l2.h  interceptor_types.cpp  interceptor_types.h  l2_cache.cpp  l2_cache.h  utils.cpp  utils.h
test/: basic-tests.cpp  cache.cpp  layer2.cpp
